Fixed some parameter issues.